test_final_v2_utf8.txt
cargo : warning: 
profiles for the non 
root package will be 
ignored, specify 
profiles at the 
workspace root:
At line:1 char:1
+ cargo test 
--workspace > 
test_final_v2.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~
~
    + CategoryInfo      
        : NotSpecified  
  : (warning: profil.   
 ..workspace root::S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr 
   orId : NativeComman  
  dError
 
package:   C:\Users\ADMI
N\Desktop\remmy-drips\Re
mitwise-Contracts\orches
trator\Cargo.toml
workspace: C:\Users\ADMI
N\Desktop\remmy-drips\Re
mitwise-Contracts\Cargo.
toml
   Compiling 
remitwise-common v0.1.0 
(C:\Users\ADMIN\Desktop\
remmy-drips\Remitwise-Co
ntracts\remitwise-common
)
   Compiling 
savings_goals v0.1.0 (C:
\Users\ADMIN\Desktop\rem
my-drips\Remitwise-Contr
acts\savings_goals)
   Compiling 
remittance_split v0.1.0 
(C:\Users\ADMIN\Desktop\
remmy-drips\Remitwise-Co
ntracts\remittance_split
)
   Compiling 
bill_payments v0.1.0 (C:
\Users\ADMIN\Desktop\rem
my-drips\Remitwise-Contr
acts\bill_payments)
   Compiling insurance 
v0.1.0 (C:\Users\ADMIN\D
esktop\remmy-drips\Remit
wise-Contracts\insurance
)
   Compiling 
family_wallet v0.1.0 (C:
\Users\ADMIN\Desktop\rem
my-drips\Remitwise-Contr
acts\family_wallet)
   Compiling reporting 
v0.1.0 (C:\Users\ADMIN\D
esktop\remmy-drips\Remit
wise-Contracts\reporting
)
error[E0063]: missing 
field `tags` in 
initializer of 
`SavingsGoal`
  --> reporting\src\test
s.rs:49:29
   |
49 |             goals.p
ush_back(SavingsGoal {
   |                    
         ^^^^^^^^^^^ 
missing `tags`

error[E0063]: missing 
field `tags` in 
initializer of 
`SavingsGoal`
  --> reporting\src\test
s.rs:59:29
   |
59 |             goals.p
ush_back(SavingsGoal {
   |                    
         ^^^^^^^^^^^ 
missing `tags`

error[E0063]: missing 
fields `external_ref` 
and `tags` in 
initializer of `Bill`
  --> reporting\src\test
s.rs:90:29
   |
90 |             
bills.push_back(Bill {
   |                    
         ^^^^ missing 
`external_ref` and 
`tags`

error[E0063]: missing 
fields `external_ref` 
and `tags` in 
initializer of `Bill`
   --> reporting\src\tes
ts.rs:123:29
    |
123 |             
bills.push_back(Bill {
    |                   
          ^^^^ missing 
`external_ref` and 
`tags`

error[E0063]: missing 
fields `external_ref` 
and `tags` in 
initializer of `Bill`
   --> reporting\src\tes
ts.rs:137:29
    |
137 |             
bills.push_back(Bill {
    |                   
          ^^^^ missing 
`external_ref` and 
`tags`

error[E0063]: missing 
fields `external_ref` 
and `tags` in 
initializer of 
`InsurancePolicy`
   --> reporting\src\tes
ts.rs:177:32
    |
177 |             polici
es.push_back(InsurancePo
licy {
    |                   
             
^^^^^^^^^^^^^^^ missing 
`external_ref` and 
`tags`

For more information 
about this error, try 
`rustc --explain E0063`.
error: could not 
compile `reporting` 
(lib test) due to 6 
previous errors
warning: build failed, 
waiting for other jobs 
to finish...
